--- a/CodecellBlazorComponent.Sample/wwwroot/index.html
+++ b/CodecellBlazorComponent.Sample/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>CodecellBlazorComponent.Sample</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="_content/CodecellComponent.Blazor/codecell.css" rel="stylesheet" />
+    <link href="_content/Codecell.Component.Blazor/codecell.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="CodecellBlazorComponent.Sample.styles.css" rel="stylesheet" />
